deploy: 60fc3f49e72c0f44d9c732f4054d5600cbe01e6a

--- a/it_resources/server_notes/adding_ssl/index.html
+++ b/it_resources/server_notes/adding_ssl/index.html
@@ -31,13 +31,13 @@ Redirect permanent / https://$FQDN/
 
 &lt;VirtualHost *:443&gt;
 ServerAdmin webmaster@casat.org
-DocumentRoot /var/www/html/$HOSTNAME
+DocumentRoot /var/www/wordpress/
 ServerName  $FQDN
 ServerAlias www.$FQDN
 SSLEngine on
 SSLCertificateFile    /etc/letsencrypt/live/$FQDN/fullchain.pem
 SSLCertificateKeyFile /etc/letsencrypt/live/$FQDN/privkey.pem
-    &lt;Directory /var/www/html/$HOSTNAME/&gt;
+    &lt;Directory /var/www/wordpress/&gt;
     Options FollowSymLinks
     AllowOverride All
     Require all granted
